Mostly stylist refinements - sizing of panels, overflows, colors, edges - a bit of work to try to resolve video failures and recreations

--- a/icefish/static/icefish/css/index.css
+++ b/icefish/static/icefish/css/index.css
@@ -1,6 +1,7 @@
 body, html{
     background-color: #213c52;
     color: #fff;
+    overflow: hidden;
 }
 
 a{
@@ -40,6 +41,7 @@ input, select, button{
     height:100vh;
     color: #eee;
     font-size: 1.2em;
+    border-right: 1px solid #235388;
 }
 
 .icefish_hidden_dialog>.pure-u-1-1{
@@ -182,8 +184,8 @@ input, select, button{
     margin:0 auto;
     padding:1em 0;
     font-size: 2em;
-    border-top: 1px solid #004B6B;
-    border-bottom: 1px solid #004B6B;
+    /*border-top: 1px solid #007bd1;*/
+    /*border-bottom: 1px solid #004B6B;*/
     color: #ddd;
     max-height: 12.5vh;
 }
